tests/valid_programs/ducks/nested_ducks.duck
use go "fmt";

fn main() {
    let x: { x: { x: { x: { x: { x: { x: Int } } } } } } = {
        x: {
            x: {
                x: {
                    x: {
                        x: {
                            x: 10,
                        }
                    }
                }
            }
        }
    };

    let y: Int = x.x.x.x.x.x.x;
    go {
        fmt.Println(y)
    }
}
