tests/errors/field_access/unknown_field.duck
fn main() {
    let x = { username: "" };
    let y = x.field;
}
